Finished project. Could use way more JS features and functionality though. Also need to fix primary mobile footer alignment as I was struggling to get this right on mobile.

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -4,7 +4,6 @@
   &:visited {
     font-size: 1.6rem;
     text-decoration: none;
-    // position: relative;
     display: inline-block;
   }
 }
@@ -29,8 +28,8 @@
 }
 
 .btn--blue-bg-square {
-  padding: 1.3rem 2.4rem;
-  margin: 0 auto;
+  padding: 1.3rem 2.7rem;
+  margin: 0;
   background-color: $color-blue-light;
   color: $color-white;
   border-radius: 3px;
