--- a/src/sass/components/_cart.scss
+++ b/src/sass/components/_cart.scss
@@ -13,10 +13,8 @@
       margin-bottom: 5.4rem;
     }
 
-    @media only screen and (max-width: 700px) {
-      position: relative;
-      // margin-left: 0;
-      // margin-right: 0;
+    @include respond(phone) {
+      margin: 2.8rem 2.7rem 4rem 1.6rem;
     }
   }
 
@@ -31,21 +29,15 @@
     padding-left: 2rem;
     margin-bottom: 6.4rem;
     margin-right: 3.15rem;
-
-    @media only screen and (max-width: 700px) {
-      position: relative;
-    }
   }
 
   &__item {
     display: flex;
-    flex-flow: row wrap;
     position: relative;
     width: 100%;
     padding-bottom: 8rem;
     border-bottom: $border-bottom-grey;
     align-items: center;
-    // justify-content: space-between;
     list-style-type: none;
 
     &:not(:first-child) {
@@ -57,6 +49,18 @@
       @include clearfix;
       padding: 0;
       height: 15.2rem;
+
+      div:not(:last-of-type) {
+        width: 20rem;
+      }
+
+      // Selecting all of the other list items media type to compensate for the padding that are on all list items after the first
+      &:not(:first-child) .cart__media-type {
+        position: absolute;
+        float: left;
+        font-size: 1.4rem;
+        top: 8.4rem;
+      }
     }
   }
 
@@ -102,8 +106,8 @@
     @media only screen and (max-width: 700px) {
       position: absolute;
       float: left;
-      top: 6.4rem;
       font-size: 1.4rem;
+      top: 6.4rem;
     }
   }
 
@@ -173,4 +177,16 @@
       padding-left: 0.9rem;
     }
   }
+}
+
+// @media only screen and (max-width: 700px) {
+//   cart__item:not(:first-child) ~ .cart__media-type {
+//     position: absolute;
+//     float: left;
+//     font-size: 1.4rem;
+//     top: 7.4rem;
+//   }
+// }
+
+.cart__item {
 }
