--- a/src/sass/components/_summary.scss
+++ b/src/sass/components/_summary.scss
@@ -10,6 +10,22 @@
       margin-bottom: 4rem;
       padding: 0 15rem;
     }
+
+    @include respond(tab-port) {
+      margin-top: 6rem;
+      margin-bottom: 4rem;
+      padding: 0 6rem;
+    }
+
+    @include respond(phone) {
+      margin-top: 4rem;
+      margin-bottom: 4rem;
+      padding: 0 2.4rem 0 1.6rem;
+    }
+
+    @media only screen and (max-width: 375px) {
+      padding: 0 0.8rem 0 0;
+    }
   }
 
   &__block {
@@ -61,6 +77,12 @@
   &__place-order-and-agreement {
     text-align: center;
   }
+
+  // &__place-order-btn {
+  //   @media only screen and (max-width: 340px) {
+  //     text-align: center;
+  //   }
+  // }
 
   &__agreement-text {
     color: $color-gray-dark-1;
