--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,29 +1,36 @@
 .footer {
-  // background-color: cornflowerblue;
   background-color: #282828;
   clear: both;
   color: $color-gray-dark-1;
+  margin-bottom: 8rem;
 
   &__primary {
-    padding: 4rem 14rem;
+    padding: 4rem 8rem;
 
     &-content {
       display: flex;
+      position: relative;
+      flex-wrap: wrap-reverse;
+      justify-content: space-between;
     }
   }
 
   &__secondary {
     width: 100%;
     background-color: #171717;
-    padding: 1.8rem 26.5rem 1.1rem 13.5rem;
+    padding: 1.8rem 4rem 1.1rem 4rem;
 
     &-content {
       font-size: 1.4rem;
       display: flex;
       margin: 0;
-      // margin: 1.8rem 1.45rem 1.1rem 1.35rem;
       align-items: center;
       justify-content: space-between;
+
+      @include respond(phone) {
+        display: block;
+        text-align: center;
+      }
     }
   }
 
@@ -37,7 +44,7 @@
     &-social-cir-icon-list {
       display: inline-block;
       width: fit-content;
-      padding-right: 7.2rem;
+      padding-right: 3rem;
     }
 
     &-secondary {
@@ -72,13 +79,26 @@
   }
 
   &__col {
-    // background-color: crimson;
-    margin-right: 1.2rem;
-    width: 20%;
+    width: 15%;
+
+    @include respond(tab-land) {
+      margin-top: 30rem;
+    }
 
     &-large {
-      // background-color: lawngreen;
-      width: 40%;
+      width: 35%;
+
+      @include respond(tab-land) {
+        width: fit-content;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+
+      @include respond(phone) {
+        width: 100%;
+      }
 
       &-resources {
         margin-bottom: 2.8rem;
@@ -107,6 +127,10 @@
 
   &__socials {
     padding-top: 2.6rem;
+
+    @include respond(phone) {
+      text-align: center;
+    }
   }
 
   &__socials--square {
@@ -129,22 +153,58 @@
   }
 }
 
+// Sticky footer
+.sticky-footer {
+  background-color: white;
+  width: 100%;
+  height: 8rem;
+  position: fixed;
+  bottom: 0;
+  z-index: 10;
+
+  @media only screen and (min-width: 900px) {
+    display: none;
+  }
+}
+
+.sticky-footer-content {
+  margin: 1.6rem;
+}
+
+.sticky-footer-total-credits {
+  font-size: 1.4rem;
+  font-weight: 700;
+  float: left;
+  margin-left: 1.8rem;
+}
+
+.sticky-footer-btn {
+  float: right;
+
+  a {
+    padding: 1.6rem 3rem;
+  }
+}
+
 // Unsure why this wasn't working while nested in &__item selector
 .footer__item-subscribe-btn {
   display: inline-block;
-  transform: translate(-0.4rem, 0.2rem);
+  transform: translate(-5rem, 0.2rem);
+
+  @include respond(tab-land) {
+    transform: translate(-5rem, 0.1rem);
+  }
+
+  @include respond(tab-port) {
+    transform: translate(-5rem, 0);
+  }
 }
 
 .footer__item-subscribe-input {
-  width: 25.8rem;
+  width: 65%;
   height: 5rem;
   border: 1px solid $color-gray-dark-1;
   border-radius: 3px;
-
-  // Temporary fix
-  @media only screen and (max-width: 700px) {
-    display: none;
-  }
 
   &::placeholder {
     color: $color-gray-dark-1;
